# hyperion

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Grids.h  Grids_c.cc  IndexTree.h  Makefile  README.md  Tree.h  table.h  test.cc  test1.cc  test2.cc  tree_index_space.cc  tree_index_space.h  utility.cc  utility.h  utility.inl
casacore/: CMakeLists.txt
cmake/: FindCasacore.cmake  FindFilesystem.cmake
dependencies/: CMakeLists.txt
dependencies/casacore/: CMakeLists.txt
dependencies/legion/: CMakeLists.txt
dependencies/mdspan/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
freezer/: README.md
gridder/: gridder.rg
hyperion/: CMakeLists.txt  Column.cc  Column.h  ColumnBuilder.h  ColumnPartition.cc  ColumnPartition.h  ColumnPartition_c.cc  ColumnPartition_c.h  ColumnSpace.cc  ColumnSpace.h  ColumnSpacePartition.cc  ColumnSpacePartition.h  Column_c.cc  Column_c.h  DefaultMapper.cc  DefaultMapper.h  Grids.h  Grids_c.cc  Grids_c.h  IndexTree.h  Keywords.cc  Keywords.h  KeywordsBuilder.h  MSAntennaColumns.cc  MSAntennaColumns.h  MSAntennaTable.h  MSDataDescriptionColumns.cc  MSDataDescriptionColumns.h  MSDataDescriptionTable.h  MSFeedTable.h  MSFieldColumns.cc  MSFieldColumns.h  MSFieldTable.cc  MSFieldTable.h  MSMainTable.h  MSSpWindowColumns.cc  MSSpWindowColumns.h  MSSpWindowTable.h  MSTable.cc  MSTable.h  (+49 more)
hyperion/cfcompute/: CMakeLists.txt  cfcompute.cc
hyperion/gridder/: CMakeLists.txt  args.cc  args.h  gridder.cc  gridder.h
hyperion/synthesis/: ATermAux0.cc  ATermAux0.h  ATermAux1.cc  ATermAux1.h  ATermIlluminationFunction.cc  ATermIlluminationFunction.h  ATermTable.cc  ATermTable.h  ATermZernikeModel.cc  ATermZernikeModel.h  CFPhysicalTable.h  CFTable.cc  CFTable.h  CFTableBase.cc  CFTableBase.h  CMakeLists.txt  DirectionCoordinateTable.cc  DirectionCoordinateTable.h  FFT.cc  FFT.h  GridCoordinateTable.cc  GridCoordinateTable.h  LinearCoordinateTable.cc  LinearCoordinateTable.h  PSTermTable.cc  PSTermTable.h  ProductCFTable.h  WTermTable.cc  WTermTable.h  Zernike.cc  Zernike.h
hyperion/testing/: CMakeLists.txt  TestExpression.h  TestLog.cc  TestLog.h  TestRecorder.h  TestRunner.py  TestSuiteDriver.cc  TestSuiteDriver.h
hyperion/testing/tests/: CMakeLists.txt  utTestLog.cc  utTestRecorder.cc  utTestRecorder.expected
hyperion/tests/: CMakeLists.txt  utHdf5.cc  utIndexColumnTask.cc  utMS.cc  utMSAntennaTable.cc  utMSDataDescriptionTable.cc  utMSFeedTable.cc  utMSFieldTable.cc  utMSMainTable.cc  utMSSpWindowTable.cc  utMapper.cc  utMeasRef.cc  utMeasRefDict.cc  utPartition.cc  utReindexColumnTask.cc  utReindexed.cc  utTable.cc  utXReindexed.cc  utXTable.cc
hyperion/tests/data/: CMakeLists.txt
hyperion/x/: Column.cc  Column.h  ColumnSpace.cc  ColumnSpace.h  ColumnSpacePartition.cc  ColumnSpacePartition.h  Table.cc  Table.h  TableField.h
hyperion/x/tests/: CMakeLists.txt  utTable.cc
legion/: CMakeLists.txt
legion_build/: CMakeLists.txt
legms/: CMakeLists.txt  Column.cc  Column.h  ColumnBuilder.h  ColumnPartition.cc  ColumnPartition.h  ColumnPartition_c.cc  ColumnPartition_c.h  Column_c.cc  Column_c.h  Grids.h  Grids_c.cc  Grids_c.h  IndexTree.h  Keywords.cc  Keywords.h  KeywordsBuilder.h  MSTable.cc  MSTable.h  MSTable_c.cc  MSTable_c.h  Makefile  MeasRef.cc  MeasRef.h  MeasRefContainer.cc  MeasRefContainer.h  MeasRefDict.cc  MeasRefDict.h  Measures.cc  Measures.h  Table.cc  Table.h  TableBuilder.cc  TableBuilder.h  TableReadTask.cc  TableReadTask.h  TableReadTask_c.cc  TableReadTask_c.h  Table_c.cc  Table_c.h  (+19 more)
legms/ms/: Column.cc  ColumnPartition_c.cc  MSTable_c.cc  MSTable_c.h  TableReadTask.h  Table_c.cc  Table_c.h
legms/testing/: CMakeLists.txt  TestExpression.h  TestLog.cc  TestLog.h  TestRecorder.h  TestRunner.py  TestSuiteDriver.cc  TestSuiteDriver.h
legms/testing/tests/: CMakeLists.txt  log.cc  utTestLog.cc  utTestLog.expected  utTestRecorder.cc  utTestRecorder.expected
legms/tests/: CMakeLists.txt  utHdf5.cc  utIndexColumnTask.cc  utMS.cc  utMeasRef.cc  utMeasRefDict.cc  utMeasures.cc  utReindexColumnTask.cc  utReindexed.cc  utTable.cc  utUtility.cc
legms/tests/data/: CMakeLists.txt  t0.ms.txz
ms/: Column.cc  Column.h  ColumnBuilder.h  ColumnBuilder.inl  ColumnHint.h  ColumnPartition.h  ColumnPartition_c.h  Column_c.cc  FillProjectionsTask.h  MSTable.cc  MSTable.h  Makefile  ReadOnlyTable.cc  ReadOnlyTable.h  SpectralWindowTable.h  Table.cc  Table.h  TableBuilder.cc  TableBuilder.h  TableReadTask.cc  TableReadTask.h  TableReadTask_c.cc  TableReadTask_c.h  Table_c.cc  WithKeywords.h  WithKeywordsBuilder.h  c_util.h  table.h  test.cc
regent/: CMakeLists.txt  gridder.rg  regent.py.in  vavg.rg
scripts/: ccdata.sh
spack/: package.py
src/freezer/: test1.cc
src/legms/: Grids.h  Grids_c.cc  Grids_c.h  Makefile  utility.h
src/legms/ms/: Column.h  ColumnBuilder.h  Column_c.h  Table.cc  Table.h  WithKeywordsBuilder.h
terra/: CMakeLists.txt
terra_build/: CMakeLists.txt
