find_package(Doxygen REQUIRED)

# Find all the public headers
# get_target_property(HYPERION_PUBLIC_HEADER_DIR hyperion INTERFACE_INCLUDE_DIRECTORIES)
#file(GLOB_RECURSE HYPERION_PUBLIC_HEADERS ${HYPERION_PUBLIC_HEADER_DIR}/hyperion/*.h)
file(GLOB_RECURSE HYPERION_PUBLIC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../hyperion/*.h)

set(DOXYGEN_INPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../hyperion)
set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/html/index.html)
set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})
configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

add_custom_command(OUTPUT ${DOXYGEN_INDEX_FILE}
  DEPENDS ${HYPERION_PUBLIC_HEADERS}
  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
  COMMENT "Generating docs")

add_custom_target(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})
